--- a/docs/10_domains/50_pharmaceutical_chemistry.mdx
+++ b/docs/10_domains/50_pharmaceutical_chemistry.mdx
@@ -8,27 +8,29 @@ import {LbeChip} from '@site/src/components/lbe/LbeElements.js';
 
 <LbeChip title="medicinal chemistry" /><LbeChip title="epidemiology" />
 
-## Welche Art von Daten?
+## Introduction
 
-Die häufigsten Arten von Daten in der pharmazeutischen/medizinischen Chemie lassen sich in drei Kategeorien einteilen: Synthese-Daten, analytische Daten und (Bio)Assay-Daten. Während die ersten beiden Typen von Daten (Synthese- und analytische Daten) in breiten Bereichen der Chemie eine Rolle spielen, sind (Bio)Assay-Daten, um etwa die biologische Aktivität einer Substanz zu untersuchen, eine Besonderheit der pharmazeutischen/medizinischen Chemie. 
+Medicinal chemistry is a chemistry-based, strongly interdisciplinary discipline. It deals with the discovery, development, identification, and synthesis of biologically active compounds, the interpretation of their mechanism of action at the molecular level, and the metabolism of the active compounds. The interactions of active compounds with their biological target(s) are analysed in silico (chemoinformatics), in vitro, and in vivo to determine selectivity and potential in terms of their therapeutic efficacy and safety. Medicinal chemists prepare and/or select suitable compounds for biological evaluation that, if found to be active, could serve as lead compounds. Chemical modifications to optimise these leads ideally result in promising candidates for preclinical studies in drug development, potentially followed by clinical studies.
 
-## Welche ELNs/Tools bieten sich an?
 
-Zur Planung des Forschungsdatenmanagements und der Erstellung von Datenmanagementplänen eignen sich Tools wie RDMO und DMP-Online. Viele Universitäten verfügen über eigene Instanzen von einer dieser Lösungen. 
+## Data Types?
 
-Um die Ansprüche an ein FAIRes Datenmanagement umzusetzen, eignen sich im Besonderen elektronische Laborbücher, da diese den Forschenden viele Aufgaben der Dokumentation abnehmen können.  In der Community werden zum Beispiel die folgenden ELNs verwendet:
-Chemotion ELN, Sicformation, eLabFTW, eLabJournal, labfolder, Benchling. Der [ELN-Finder](https://eln-finder.ulb.tu-darmstadt.de/search?f.K03=Pharmacy,equals&spc.page=1) hat noch weitere Optionen. Wie das richtige ELN für die Arbeitsgruppe ausgesucht werden kann, kann hier nachgelesen werden (Link zum Knowledge Base Artikel). 
+The most common types of data in pharmaceutical/medicinal chemistry can be divided into three categories: synthesis data, analytical data, and (bio)assay data. While the first two types of data (synthesis and analytical data) play a role in broad areas of chemistry, (bio)assay data, which is used to investigate the biological activity of a substance, is a particular feature of pharmaceutical/medicinal chemistry. 
 
-## Wie und wo können Daten publiziert werden?
+## ELNs and Other Tools?
 
-Das Publizieren von Forschungsdaten ist wichtig, um anderen Forschenden die Möglichkeit zu geben, diese nachzunutzen. Um möglichst viele Forschende zu erreichen, kann die Auswahl des richtigen Repositoriums entscheidend sein (mehr dazu im Artikel zur Auswahl des richtigen Repositoriums). 
+To meet the requirements for FAIR data management, electronic lab notebooks (ELNs) are particularly useful as they can take over many documentation tasks for researchers. The following ELNs are used in the community, for example: Chemotion ELN, Sicformation, eLabFTW, eLabJournal, labfolder, Benchling. The [ELN-Finder](https://eln-finder.ulb.tu-darmstadt.de/search?f.K03=Pharmacy,equals&spc.page=1) offers additional options. How to choose the right ELN for the research group can be read [here](https://knowledgebase.nfdi4chem.de/knowledge_base/docs/choose_eln/). 
 
-Für Synthese-Daten sowie analytische Daten empfehlen sich spezifische Repositorien wie z. B. Chemotion Repositorium (Synthese-Daten), MassBankEU (Massenspektren) oder nmrXiv (für NMR-Daten). Für die dritte Kategorie an Daten ((Bio)Assay-Daten) ist zurzeit kein optimales Repositorium bekannt, daher empfiehlt sich hier das generische Repositorium RADAR4Chem.
+## Publishing Data
 
-## Herausforderungen
+Publishing research data is important to allow other researchers to reuse it. To reach as many researchers as possible, choosing the right repository can be crucial (check the [Choose a Repository](https://knowledgebase.nfdi4chem.de/knowledge_base/docs/choose_repository/) article for more information).
 
-Im Vergleich zu vielen anderen Bereichen der Chemie, findet in der pharmazeutischen/medizinischen Chemie häufig eine sehr anwendungsbezogene Forschung statt, welche zu Patenten und Produktentwicklungen führen können. Daher sind besonders an die verwendeten elektronischen Laborbücher höhere Ansprüche im Bereich von Prüfprotokollen (audit trials) gestellt. Dies muss bei der Auswahl der verwendeten Tools von Anfang an berücksichtigt werden. Ebenso kann dies zu besonderen Auflagen bei der Veröffentlichung von Forschungsdaten führen.
+For synthesis data and analytical data, specific repositories such as [Chemotion Repository](https://www.chemotion-repository.net/welcome) (synthesis data), [MassBankEU](https://massbank.eu/MassBank/) (mass spectra), or [nmrXiv](https://nmrxiv.org/) (for NMR data) are recommended. For the third category of data ((bio)assay data), no optimal repository is currently known, so the generic repository [RADAR4Chem](https://radar.products.fiz-karlsruhe.de/de/radarabout/radar4chem) is recommended.
 
-Die Diversität der verwendeten Datenformate sowie der Analyseverfahren stellen zusätzlich eine Herausforderung für ein gutes FDM dar. Besonders wenn Labor/Analysegeräte verwendet werden, welche aufgrund ihrer Software nicht mehr oder nur über Umwege in ein Netzwerk integriert werden können. 
+## Challenges
 
-Bei diesen Herausforderungen unterstützt NFDI4Chem gern, und Sie können uns jederzeit über den Helpdesk kontaktieren. 
+Compared to many other areas of chemistry, pharmaceutical/medicinal chemistry often involves highly application-oriented research that can lead to patents and product developments. Therefore, the electronic lab notebooks used must meet higher standards in the area of audit trails. This must be considered from the outset when selecting the tools to be used. Additionally, this can lead to special requirements for publishing research data.
+
+The diversity of data formats and analytical methods used also poses a challenge for good research data management (RDM). This is particularly true when laboratory/analytical instruments are used that can no longer be integrated into a network or can only be integrated via detours due to their software.
+
+NFDI4Chem is happy to assist with these challenges, and you can contact us anytime through the Helpdesk.
