--- a/docs/10_domains/50_pharmaceutical_chemistry.mdx
+++ b/docs/10_domains/50_pharmaceutical_chemistry.mdx
@@ -21,6 +21,8 @@ The most common types of data in pharmaceutical/medicinal chemistry can be divid
 
 To meet the requirements for FAIR data management, electronic lab notebooks (ELNs) are particularly useful as they can take over many documentation tasks for researchers. The following ELNs are used in the community, for example: Chemotion ELN, Sicformation, eLabFTW, eLabJournal, labfolder, Benchling. The [ELN-Finder](https://eln-finder.ulb.tu-darmstadt.de/search?f.K03=Pharmacy,equals&spc.page=1) offers additional options. How to choose the right ELN for the research group can be read [here](https://knowledgebase.nfdi4chem.de/knowledge_base/docs/choose_eln/). 
 
+For the planning of research data management and the creation of data management plans, tools such as RDMO and DMP-Online are suitable. Many universities have their own instances of one of these solutions.
+
 ## Publishing Data
 
 Publishing research data is important to allow other researchers to reuse it. To reach as many researchers as possible, choosing the right repository can be crucial (check the [Choose a Repository](https://knowledgebase.nfdi4chem.de/knowledge_base/docs/choose_repository/) article for more information).
