--- a/docs/10_domains/50_pharmaceutical_chemistry.mdx
+++ b/docs/10_domains/50_pharmaceutical_chemistry.mdx
@@ -21,11 +21,11 @@ The most common types of data in pharmaceutical/medical chemistry can be divided
 Tools such as RDMO and DMP-Online are suitable for planning research data management and creating data management plans. Many universities have their own instances of one of these solutions. 
 
 Electronic lab notebooks are particularly suitable for implementing the requirements of FAIR data management, as they can relieve researchers of many documentation tasks.For example, the following ELNs are used in the community:
-Chemotion ELN, Sicformation, eLabFTW, eLabJournal, labfolder, Benchling. The ELN finder has even more options (https://eln-finder.ulb.tu-darmstadt.de/search?f.K03=Pharmacy,equals&spc.page=1). How to select the right ELN for the workgroup can be read here (link to the Knowledge Base article).
+Chemotion ELN, Sicformation, eLabFTW, eLabJournal, labfolder, Benchling. The [ELN finder](https://eln-finder.ulb.tu-darmstadt.de/search?f.K03=Pharmacy,equals&spc.page=1) has even more options. How to select the right ELN for the workgroup can be [read here](/docs/choose_eln).
 
 
 ## Publishing Data
-Publishing research data is important in order to give other researchers the opportunity to reuse it. In order to reach as many researchers as possible, choosing the right repository can be crucial (more on this in the article on choosing the right repository).
+Publishing research data is important in order to give other researchers the opportunity to reuse it. In order to reach as many researchers as possible, choosing the right repository can be crucial (more on this in the article on [choosing the right repository](/docs/choose_repository).
 
 For synthesis data and analytical data, specific repositories such as [Chemotion Repository](https://www.chemotion-repository.net/welcome) (synthesis data), [MassBank EU](https://massbank.eu/) (mass spectra) or [nmrXiv](https://nmrxiv.org/) (for NMR data) are recommended. For the third category of data ((bio)assay data) no optimal repository is currently known, therefore the generic repository [RADAR4Chem](https://radar.products.fiz-karlsruhe.de/de/radarabout/radar4chem) is recommended.
 
