edit: small en fix

--- a/docs/50_data_publication/70_publication_standards.mdx
+++ b/docs/50_data_publication/70_publication_standards.mdx
@@ -3,7 +3,7 @@ title: "Publishing Standards"
 slug: "/publishing_standards"
 ---
 
-On this page we collect a non-exhaustive list of data publication standards, formulated as principles, that have been developed within the NFDI4Chem Publication Standards project. These standards are intended to improve the quality of metadata and streamline publication workflows, including the review process of manuscripts with corresponding datasets published in research data repositories. 
+On this page we collect a non-exhaustive list of data publication standards, formulated as principles, that have been developed within the NFDI4Chem Publication Standards project. These standards are intended to improve the quality of metadata and streamline publication workflows, including the manuscript review process with corresponding datasets published in research data repositories. 
 
 For more generic information for authors on publishing in field-specific and generic, multidisciplinary repositories such as publishing data in open formats or providing machine-readable chemical structures alongside the analytical data, please have a look to our page on [Best-Practices](/docs/best_practice/).
 
