--- a/docs/50_data_publication/70_publication_standards.mdx
+++ b/docs/50_data_publication/70_publication_standards.mdx
@@ -90,10 +90,10 @@ To assist authors in selecting **well-established and community-specific [reposi
 ### Recommendations to Include Data Availability Statements
 
 :::tip Standard
-Journals should recommend that authors provide a data availability statement. Author guidelines should also provide templates for illustration.*
+*Journals should recommend that authors provide a data availability statement. Author guidelines should also provide templates for illustration.*
 :::
 
-[Templates](/docs/data_availability_statement/#templates-for-data-availability-statements) for [**data availability statements**](/docs/data_availability_statement) or similarly termed section should be made available to authors in author guidelines of journals. This guides authors in correctly submitting underlying data with their manuscript and effectively communicating how to find and access the data by including the DOI or other PID, enabling the FAIR principles (e.g. [A1](docs/fair#a1-metadata-are-retrievable-by-their-identifier-using-a-standardized-communications-protocol), [I3](/docs/fair#i3-metadata-include-qualified-references-to-other-metadata)). It should also be mentioned if templates are selectable and information should be provided via the manuscript submission system.
+[Templates](/docs/data_availability_statement/#templates-for-data-availability-statements) for [**data availability statements**](/docs/data_availability_statement) or a similarly termed section should be made available to authors in the journal's author guidelines. This guides authors in correctly submitting underlying data with their manuscript and effectively communicating how to find and access the data by including the DOI or other PID, enabling the FAIR principles (e.g. [A1](docs/fair#a1-metadata-are-retrievable-by-their-identifier-using-a-standardized-communications-protocol), [I3](/docs/fair#i3-metadata-include-qualified-references-to-other-metadata)). It should also be mentioned whether templates are selectable and information should be provided via the manuscript submission system.
 
 ### Data Availability Statements and Manuscript Submission Systems 
 
@@ -101,7 +101,7 @@ Journals should recommend that authors provide a data availability statement. Au
 *Journals should add a data availability statement to published articles and collect the necessary information through their submission systems.*
 :::
 
-[Templates](/docs/data_availability_statement/#templates-for-data-availability-statements) for data [**availability statements**](/docs/data_availability_statement) or similarly termed section should also be added to the manuscript submission system. Once a template has been selected by the submitter, the data availability statement should be editable to allow authors to add additional information, such as what data are included in the dataset, similar to what is currently often mentioned in the section on supporting information PDF files. The submission system should then require the submitter to provide the necessary information, such as the DOI (specified as [DOI name](https://www.doi.org/doi-handbook/HTML/doi-name-syntax2.html) e.g. `10.1000/182` or as a URL i.e. including a resolver e.g `https://doi.org/10.1000/182` ), repository name, third party name and contact information, or reasons for restricted access and information on how to access a dataset, depending on the template used.
+[Templates](/docs/data_availability_statement/#templates-for-data-availability-statements) for [**data availability statements**](/docs/data_availability_statement) or a similarly termed section should also be added to the manuscript submission system. Once a template has been selected by the submitter, the data availability statement should be editable to allow authors to add additional information, such as what data are included in the dataset, similar to what is currently often mentioned in the section on supporting information PDF files. The submission system should then require the submitter to provide the necessary information, such as the DOI (specified as [DOI name](https://www.doi.org/doi-handbook/HTML/doi-name-syntax2.html) e.g. `10.1000/182` or as a URL i.e. including a resolver e.g. `https://doi.org/10.1000/182` ), repository name, third party name and contact information, or reasons for restricted access and information on how to access a dataset, depending on the template used.
 
 ### Link Datasets to Articles in CrossRef DOI Metadata
 
@@ -133,27 +133,27 @@ In agreement with [Crossref's documentation on **linking datasets** to published
 *Journal author guidelines should explicitly encourage pre-submission of datasets.*
 :::
 
-Similar to the publication of preprints, journal author guidelines should allow for the pre-submission of datasets, as this is also already the case for many journals for crystallographic data published in CSD with CCDC. Datasets published prior to manuscript submission facilitate manuscript submission workflows as DOIs of dataset are registered, DOIs can be validated and datasets can be included in the review process.
+Similar to the publication of preprints, journal author guidelines should allow for the pre-submission of datasets, as this is also already the case for many journals for crystallographic data published in CSD with CCDC. Datasets published prior to manuscript submission facilitate manuscript submission workflows as DOIs of datasets are registered. DOIs can therefore be validated and datasets can be included in the review process.
 
 :::danger Danger
-A disadvantage of pre-submission is that researchers cannot link the dataset to the manuscript, as the manuscript has not yet been published and no DOI has been registered. The metadata of the dataset need to be manually updated by the authors after the article got published. Datasets with status *under review* are one way to overcome this disadvantage (see below).
+A disadvantage of pre-submission is that researchers cannot link the dataset to the manuscript, as the manuscript has not yet been published and no DOI has been registered. The metadata of the dataset must then be manually updated by the authors after the article has been published. Datasets with status *under review* are one way to overcome this disadvantage (see below).
 :::
 
 ### Recommendations to Include Research Data in the Review Process
 
 :::tip Standard
-*Journal author guidelines should explicitly encourage to include research data in the review process.*
+*Journal author guidelines should explicitly encourage research data to be included in the review process.*
 :::
 
-Some repositories have an *under review* status alongside the *draft* and *published* statuses. A dataset *under review* is not editable and not published, i.e. it does not have a DOI registered, which can be validated. Nonetheless, the dataset has an internally reserved DOI and is accessible via a URL to provide access to editors and reviewers. This allows research data to be included in the review process. The URL to access the dataset should be requested by the submission system so that it can be forwarded to editors and reviewers.
+Some repositories have an *under review* status alongside the *draft* and *published* statuses. A dataset *under review* is not editable and not yet published, i.e. it does not have a DOI registered. Therefore, the DOI cannot be validated. Nonetheless, the dataset has an internally reserved DOI and is accessible via a URL to provide access to editors and reviewers. This allows research data to be included in the review process. The URL to access the dataset should be requested by the submission system so that it can be forwarded to editors and reviewers.
 
-### Encourage to Publish Datasets prio Publishing Articles
+### Encourage Authors to Publish Datasets prior Publishing Articles
 
 :::tip Standard
-*Journal author guidelines should require that datasets under review get published prior an article gets published.*
+*Journal author guidelines should require that datasets under review to be published prior to the publication of the associated article.*
 :::
 
-To assist in automated workflows, such as linking the datasets to the published article through their respective PIDs, **datasets *under review* should be published prior to the publication of the article**. Once a manuscript is accepted, the authors should be informed to publish their dataset *under review*. This ensures that the data has a registered DOI when the article gets published. Consequently, journal can run quality control checks on the provided DOI such as validation. This process must be explicitly communicated with authors through the author guidelines, yet can also be included within other communication upon acceptance. Contemporaneous, the DOI for the article should be provided so that authors can include this information in their dataset's metadata prior to the publication of the dataset. Finally, the article gets published, and its DOI gets registered.
+To assist in automated workflows, such as linking the datasets to the published article through their respective PIDs, **datasets *under review* should be published prior to the publication of the article**. Once a manuscript has been accepted, the authors should be informed to publish their dataset *under review*. This ensures that the data has a registered DOI when the article gets published. Consequently, journals can run quality control checks on the provided DOI such as validation. This process must be explicitly communicated with authors through the author guidelines, yet, can also be included within other communication upon acceptance. Contemporaneous, the DOI for the article should be provided so that authors can include this information in their dataset's metadata prior to the publication of the dataset. Finally, the article is published, and its DOI is registered.
 
 ### Scholix.org
 
@@ -161,7 +161,7 @@ To assist in automated workflows, such as linking the datasets to the published 
 *Journals and publishers should use Scholix.org.*
 :::
 
-[**Scholix**](https://doi.org/10.1045/january2017-burton) provides the framework for improving the links between scientific literature and research data as well as between data and data with the goal of providing a **high-level interoperability framework for exchanging information about these links**. Thus, Scholix hubs, such as [DataCite](https://datacite.org/) or [OpenAire](https://www.openaire.eu/), contribute information on their metadata records, which contain information on connected digital objects. This information should be used academic publishers to discover datasets that correspond to an article but were published after the article was published, which allows the metadata of the article to be updated with links to the dataset (see above).
+[**Scholix**](https://doi.org/10.1045/january2017-burton) provides the framework for improving the links between scientific literature and research data as well as between data and data with the goal of providing a **high-level interoperability framework for exchanging information about these links**. Thus, Scholix hubs, such as [DataCite](https://datacite.org/) or [OpenAire](https://www.openaire.eu/), contribute information on their metadata records, which contain information on connected digital objects. This information should be used by academic publishers to discover datasets that correspond to an article but were published after the article was published, which allows the metadata of the article to be updated with links to the dataset (see above).
 
 ## For Research Data Infrastructure and Resource Providers
 
@@ -171,9 +171,9 @@ To assist in automated workflows, such as linking the datasets to the published 
 *Research data repositories should include the metadata in datasets downloaded by researchers.*
 :::
 
-While researchers upload their data, metadata is attached. For generic, multidisciplinary repositories, additional metadata is provided via a metadata editor. For field-specific repositories, the metadata is extracted from the analytical data files and provided by researcher along their lab workflows, as this is the case for Chemotion ELN. Once data is retrieved from a repository, this metadata should not be lost but should be included in the downloaded package. The minimum to include is the descriptive DataCite metadata. 
+While researchers upload their data, metadata is attached. For generic, multidisciplinary repositories, additional metadata is provided via a metadata editor. For field-specific repositories, the metadata is extracted from the analytical data files and provided by researchers along their lab workflows, as this is the case for Chemotion ELN. Once data is retrieved from a repository, this metadata should not be lost but should be included in the downloaded package. The minimum to include is the descriptive DataCite metadata. 
 
-[BagIt](https://www.rfc-editor.org/rfc/rfc8493.html), a set of hierarchical file system conventions, is one solution for including metadata in downloaded dataset.
+[BagIt](https://www.rfc-editor.org/rfc/rfc8493.html), a set of hierarchical file system conventions, is one solution for including metadata in downloaded dataset. 
 
 ### Structured Domain-Specific Metadata Should be Part of a Dataset
 
@@ -188,10 +188,10 @@ One solution to this is to include Schema.org metadata by [combining RO-Crate an
 ### Collection DOIs
 
 :::tip Standard
-*Research data repositories should provide a Collection DOI to wrap research data objects that are relevant to an article to be published.*
+*Research data repositories should provide a Collection DOI to wrap research data objects that are relevant to a single article that is to be published.*
 :::
 
-Field-specific research data repositories may provide DOIs to reference individual chemical reactions, molecules, and their analytical data. Generic, multidisciplinary research data repositories provide DOIs for a whole published datasets, while more than one published dataset may be relevant to study results published via an article. In other words, many DOIs may be relevant to a published article, whereas **a data availability statement may provide some DOIs but not many DOIs**. To facilitate the process of manuscript submission and article publication, each repository should provide a **Collection DOI** that wraps relevant data that should be referenced in the data availability statement. This will ensure that all data underlying a published manuscript can be linked to an article in the data availability statement and the CrossRef metadata of that article.
+Field-specific research data repositories may provide DOIs to reference individual chemical reactions, molecules, and their analytical data. Generic, multidisciplinary research data repositories provide DOIs for whole published datasets, while more than one published dataset may be relevant to study results published via an article. In other words, many DOIs may be relevant to a published article, whereas **a data availability statement may provide some DOIs but not many DOIs**. To facilitate the process of manuscript submission and article publication, each repository should provide a **Collection DOI** that wraps relevant data that should be referenced in the data availability statement. This will ensure that all data underlying a published manuscript can be linked to an article in the data availability statement and the CrossRef metadata of that article.
 
 ### Embargo Period and Metadata Accessibility
 
@@ -199,7 +199,7 @@ Field-specific research data repositories may provide DOIs to reference individu
 *Datasets published with an embargo period should have inaccessible data but accessible metadata.*
 :::
 
-While an **embargo** period restricts access to a published dataset, the **metadata should be accessible** – *publish* with embargo. This allows relevant information on the dataset to be retrieved and enables [FAIR](/docs/fair) ([A2](/docs/fair/#a2-metadata-are-accessible-even-when-the-data-are-no-longer-available)), while guaranteeing first rights to the data to the authors. Findable and accessible metadata is required to link articles and datasets, as DOIs to datasets need to be **validated** before the metadata record of articles gets updated.
+While an **embargo** period restricts access to a published dataset, the **metadata should be accessible**—*publish* with embargo. This allows relevant information on the dataset to be retrieved and enables [FAIR](/docs/fair) ([A2](/docs/fair/#a2-metadata-are-accessible-even-when-the-data-are-no-longer-available)), while guaranteeing first rights to the data to the authors. Findable and accessible metadata is required to link articles and datasets, as DOIs to datasets need to be **validated** before the metadata record of articles gets updated.
 
 ### Scholix.org
 
@@ -215,12 +215,12 @@ While an **embargo** period restricts access to a published dataset, the **metad
 *Research data repositories should provide access to datasets under review.*
 :::
 
-In order to include datasets in the review process of manuscripts, repositories should provide access to reviewers. It is strongly encouraged that repositories provide a status *in review* beside of the statuses *draft* and *published*. **A dataset under review should not be editable but should be accessible** via a URL, while the DOI is not yet discoverable and the DOI metadata is not yet accessible as the dataset is not yet published.
+In order to include datasets in the review process of manuscripts, repositories should provide access to reviewers. It is strongly encouraged that repositories provide a status *in review* in addition to the statuses *draft* and *published*. **A dataset under review should not be editable but should be accessible** via a URL, while the DOI is not yet discoverable and the DOI metadata is not yet accessible as the dataset has not yet been published.
 
 ### Reviewer Access to Datasets under Review
 
 :::tip Standard
-*URLs to access datasets under review should have the access credentials encoded in the URL.*
+*URLs to access datasets under review should have the access credentials encoded within the URL.*
 :::
 
 **Review links** for datasets *under review* should have the **access credentials** encoded in the URL, rather than having separate login and password. This avoids having to forward these details to the reviewer via the submission system. 
@@ -256,7 +256,7 @@ This ensures humans as well as machines can trace and interpret where the data h
 *Research data repositories should allow researchers to correct and update the metadata of datasets.*
 :::
 
-As the process of adding metadata via a metadata editor can be error-prone, creators should be allowed to **correct and update** the PID metadata as well as any other metadata. For full transparency, metadata may be **versioned**. The record may indicate to viewers that changes were made. Updating of metadata contributes to [FAIR](/docs/fair) ([F2](/docs/fair/#f2-data-are-described-with-rich-metadata-defined-by-r1-below)) by enhancing the richness of metadata, and also allows creators to add additional related identifiers for recently published related datasets and articles. 
+As the process of adding metadata via a metadata editor can be error-prone, creators should be allowed to **correct and update** the PID metadata as well as any other metadata. For full transparency, metadata may be **versioned**. The record may indicate to viewers that changes were made. Updating metadata contributes to [FAIR](/docs/fair) ([F2](/docs/fair/#f2-data-are-described-with-rich-metadata-defined-by-r1-below)) by enhancing the richness of metadata, and also allows creators to add additional related identifiers for recently published related datasets and articles. 
 
 ### Legal Issues on Dataset Abstract 
 
@@ -280,23 +280,23 @@ Repositories often tend to provide confusingly long lists of licences. Furthermo
 *Research data repositories should encourage researchers to choose a Creative Commons licence to simplify the landscape of licences and their choice.*
 :::
 
-In line with grouping licences between software and datasets, pointing authors towards the selection of [**Creative Commons (CC)**](https://creativecommons.org/) licence alleviates the selection process. When publishing research data, Creative Commons licences that are no more restrictive than CC BY are strongly recommended.
+In line with grouping licences between software and datasets, pointing authors towards the selection of a [**Creative Commons (CC)**](https://creativecommons.org/) licence alleviates the selection process. When publishing research data, Creative Commons licences that are no more restrictive than CC BY are strongly recommended.
 
 ### Promote the least Restrictive Creative Commons Licences
 
 :::tip Standard
-*Research data repositories should suggest licences such as CC0 or CC BY by pre-selecting such a licence rather than more restrictive licences such as CC BY-SA or even CC BY-NC-ND, which can make reuse very difficult.*
+*Research data repositories should suggest licences such as CC0 or CC BY by pre-selecting such a licence rather than more restrictive licences such as CC BY-SA or even CC BY-NC-ND, which can inhibit reuse.*
 :::
 
-Shared data should be as **open as possible, as closed as necessary** with the intent of allowing and enabling others to reuse and build upon the work. Thus, encouraging rather open licences such as **[CC0](https://creativecommons.org/public-domain/cc0/)** and **[CC BY](https://creativecommons.org/licences/by/4.0/)** as opposed to more restrictive licences such as [CC BY-SA](https://creativecommons.org/licences/by-sa/4.0/) or even [CC BY-NC-ND](https://creativecommons.org/licences/by-nc-nd/4.0/).
+Shared data should be as **open as possible, as closed as necessary** with the intent of allowing and enabling others to reuse and build upon the work. Thus, encouraging rather open licences such as **[CC0](https://creativecommons.org/public-domain/cc0/)** and **[CC BY](https://creativecommons.org/licences/by/4.0/)** as opposed to more restrictive licences such as [CC BY-SA](https://creativecommons.org/licences/by-sa/4.0/) or even [CC BY-NC-ND](https://creativecommons.org/licences/by-nc-nd/4.0/). Such restrictive licenses can make data reuse difficult.
 
 ### Creators and Contributors
 
 :::tip Standard
-*Research data repositories should label fields for creators in their (DataCite) metadata editor as authors/creators.*
+*Research data repositories should label fields for creators in their (DataCite) metadata editor as* Authors/Creators.
 :::
 
-Researchers are used to talking about authors when it comes to the publication of results with one of the scientific publishers. On the other hand, DataCite distinguishes between authors and contributors, with the latter also being assigned a role. To avoid confusion for researchers who want to publish their data, metadata editors of repositories should guide researchers when adding metadata by labelling the field for creators in their (DataCite) metadata editors as authors/creators. 
+Researchers are used to talking about authors when it comes to the publication of results with one of the scientific publishers. On the other hand, DataCite distinguishes between authors and contributors, with the latter also being assigned a role. To avoid confusion for researchers who want to publish their data, repositories should guide researchers when adding metadata by labelling the field for creators in their (DataCite) metadata editors as *Authors/Creators*. 
 
 ----
 Main authors: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661), [ORCID: 0000-0002-6243-2840](https://orcid.org/0000-0002-6243-2840)
