--- a/docs/50_data_publication/70_publishing_standards/25_publishing_standards_intro.mdx
+++ b/docs/50_data_publication/70_publishing_standards/25_publishing_standards_intro.mdx
@@ -10,7 +10,7 @@ import N4CFeatures from '/src/components/N4CFeatures.js';
 Authors, academic publishers and research data infrastructure and resource providers are the target audiences for these standards.
 :::
 
-On this page we collect a non-exhaustive list of data publication standards, formulated as principles, that have been developed within the NFDI4Chem Publication Standards project. These standards are intended to implement the [FAIR Data Principles](/docs/fair/) with repect to data publication workflows. The main objective of these standards is to improve the quality of metadata and streamline publication workflows, including the peer-review process for manuscripts with corresponding datasets published in research data repositories. 
+On this page we collect a non-exhaustive list of data publication standards, formulated as principles, that have been developed within the NFDI4Chem Publication Standards project. These standards are intended to implement the [FAIR Data Principles](/docs/fair/) with repect to data publication workflows. The main objective of these standards is to improve the quality of metadata and streamline publication workflows, including the manuscript peer-review process with corresponding datasets published in research data repositories. 
 
 Click on a button below to get started with with standards for authors, academic publishers and infrastructure providers. These standards will be continously updated. 
 
