--- a/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
+++ b/docs/50_data_publication/70_publishing_standards/30_publishing_standards_infrastructure.mdx
@@ -11,9 +11,9 @@ slug: "/publishing_standards_infrastructure"
 *Research data repositories should include the metadata in datasets downloaded by researchers.*
 :::
 
-While researchers upload their data, metadata is attached. For generic, multidisciplinary repositories, additional metadata is provided via a metadata editor. For field-specific repositories, the metadata is extracted from the analytical data files and provided by researcher along their lab workflows, as this is the case for Chemotion ELN. Once data is retrieved from a repository, this metadata should not be lost but should be included in the downloaded package. The minimum to include is the descriptive DataCite metadata. 
+While researchers upload their data, metadata is attached. For generic, multidisciplinary repositories, additional metadata is provided via a metadata editor. For field-specific repositories, the metadata is extracted from the analytical data files and provided by researchers along their lab workflows, as this is the case for Chemotion ELN. Once data is retrieved from a repository, this metadata should not be lost but should be included in the downloaded package. The minimum to include is the descriptive DataCite metadata. 
 
-[BagIt](https://www.rfc-editor.org/rfc/rfc8493.html), a set of hierarchical file system conventions, is one solution for including metadata in downloaded dataset.
+[BagIt](https://www.rfc-editor.org/rfc/rfc8493.html), a set of hierarchical file system conventions, is one solution for including metadata in downloaded dataset. 
 
 ### Structured Domain-Specific Metadata Should be Part of a Dataset
 
@@ -28,10 +28,10 @@ One solution to this is to include Schema.org metadata by [combining RO-Crate an
 ### Collection DOIs
 
 :::tip Standard
-*Research data repositories should provide a Collection DOI to wrap research data objects that are relevant to an article to be published.*
+*Research data repositories should provide a Collection DOI to wrap research data objects that are relevant to a single article that is to be published.*
 :::
 
-Field-specific research data repositories may provide DOIs to reference individual chemical reactions, molecules, and their analytical data. Generic, multidisciplinary research data repositories provide DOIs for a whole published datasets, while more than one published dataset may be relevant to study results published via an article. In other words, many DOIs may be relevant to a published article, whereas **a data availability statement may provide some DOIs but not many DOIs**. To facilitate the process of manuscript submission and article publication, each repository should provide a **Collection DOI** that wraps relevant data that should be referenced in the data availability statement. This will ensure that all data underlying a published manuscript can be linked to an article in the data availability statement and the CrossRef metadata of that article.
+Field-specific research data repositories may provide DOIs to reference individual chemical reactions, molecules, and their analytical data. Generic, multidisciplinary research data repositories provide DOIs for whole published datasets, while more than one published dataset may be relevant to study results published via an article. In other words, many DOIs may be relevant to a published article, whereas **a data availability statement may provide some DOIs but not many DOIs**. To facilitate the process of manuscript submission and article publication, each repository should provide a **Collection DOI** that wraps relevant data that should be referenced in the data availability statement. This will ensure that all data underlying a published manuscript can be linked to an article in the data availability statement and the CrossRef metadata of that article.
 
 ### Embargo Period and Metadata Accessibility
 
@@ -39,7 +39,7 @@ Field-specific research data repositories may provide DOIs to reference individu
 *Datasets published with an embargo period should have inaccessible data but accessible metadata.*
 :::
 
-While an **embargo** period restricts access to a published dataset, the **metadata should be accessible** – *publish* with embargo. This allows relevant information on the dataset to be retrieved and enables [FAIR](/docs/fair) ([A2](/docs/fair/#a2-metadata-are-accessible-even-when-the-data-are-no-longer-available)), while guaranteeing first rights to the data to the authors. Findable and accessible metadata is required to link articles and datasets, as DOIs to datasets need to be **validated** before the metadata record of articles gets updated.
+While an **embargo** period restricts access to a published dataset, the **metadata should be accessible**—*publish* with embargo. This allows relevant information on the dataset to be retrieved and enables [FAIR](/docs/fair) ([A2](/docs/fair/#a2-metadata-are-accessible-even-when-the-data-are-no-longer-available)), while guaranteeing first rights to the data to the authors. Findable and accessible metadata is required to link articles and datasets, as DOIs to datasets need to be **validated** before the metadata record of articles gets updated.
 
 ### Scholix.org
 
@@ -55,12 +55,12 @@ While an **embargo** period restricts access to a published dataset, the **metad
 *Research data repositories should provide access to datasets under review.*
 :::
 
-In order to include datasets in the review process of manuscripts, repositories should provide access to reviewers. It is strongly encouraged that repositories provide a status *in review* beside of the statuses *draft* and *published*. **A dataset under review should not be editable but should be accessible** via a URL, while the DOI is not yet discoverable and the DOI metadata is not yet accessible as the dataset is not yet published.
+In order to include datasets in the review process of manuscripts, repositories should provide access to reviewers. It is strongly encouraged that repositories provide a status *in review* in addition to the statuses *draft* and *published*. **A dataset under review should not be editable but should be accessible** via a URL, while the DOI is not yet discoverable and the DOI metadata is not yet accessible as the dataset has not yet been published.
 
 ### Reviewer Access to Datasets under Review
 
 :::tip Standard
-*URLs to access datasets under review should have the access credentials encoded in the URL.*
+*URLs to access datasets under review should have the access credentials encoded within the URL.*
 :::
 
 **Review links** for datasets *under review* should have the **access credentials** encoded in the URL, rather than having separate login and password. This avoids having to forward these details to the reviewer via the submission system. 
@@ -96,7 +96,7 @@ This ensures humans as well as machines can trace and interpret where the data h
 *Research data repositories should allow researchers to correct and update the metadata of datasets.*
 :::
 
-As the process of adding metadata via a metadata editor can be error-prone, creators should be allowed to **correct and update** the PID metadata as well as any other metadata. For full transparency, metadata may be **versioned**. The record may indicate to viewers that changes were made. Updating of metadata contributes to [FAIR](/docs/fair) ([F2](/docs/fair/#f2-data-are-described-with-rich-metadata-defined-by-r1-below)) by enhancing the richness of metadata, and also allows creators to add additional related identifiers for recently published related datasets and articles. 
+As the process of adding metadata via a metadata editor can be error-prone, creators should be allowed to **correct and update** the PID metadata as well as any other metadata. For full transparency, metadata may be **versioned**. The record may indicate to viewers that changes were made. Updating metadata contributes to [FAIR](/docs/fair) ([F2](/docs/fair/#f2-data-are-described-with-rich-metadata-defined-by-r1-below)) by enhancing the richness of metadata, and also allows creators to add additional related identifiers for recently published related datasets and articles. 
 
 ### Legal Issues on Dataset Abstract 
 
@@ -120,23 +120,23 @@ Repositories often tend to provide confusingly long lists of licences. Furthermo
 *Research data repositories should encourage researchers to choose a Creative Commons licence to simplify the landscape of licences and their choice.*
 :::
 
-In line with grouping licences between software and datasets, pointing authors towards the selection of [**Creative Commons (CC)**](https://creativecommons.org/) licence alleviates the selection process. When publishing research data, Creative Commons licences that are no more restrictive than CC BY are strongly recommended.
+In line with grouping licences between software and datasets, pointing authors towards the selection of a [**Creative Commons (CC)**](https://creativecommons.org/) licence alleviates the selection process. When publishing research data, Creative Commons licences that are no more restrictive than CC BY are strongly recommended.
 
 ### Promote the least Restrictive Creative Commons Licences
 
 :::tip Standard
-*Research data repositories should suggest licences such as CC0 or CC BY by pre-selecting such a licence rather than more restrictive licences such as CC BY-SA or even CC BY-NC-ND, which can make reuse very difficult.*
+*Research data repositories should suggest licences such as CC0 or CC BY by pre-selecting such a licence rather than more restrictive licences such as CC BY-SA or even CC BY-NC-ND, which can inhibit reuse.*
 :::
 
-Shared data should be as **open as possible, as closed as necessary** with the intent of allowing and enabling others to reuse and build upon the work. Thus, encouraging rather open licences such as **[CC0](https://creativecommons.org/public-domain/cc0/)** and **[CC BY](https://creativecommons.org/licences/by/4.0/)** as opposed to more restrictive licences such as [CC BY-SA](https://creativecommons.org/licences/by-sa/4.0/) or even [CC BY-NC-ND](https://creativecommons.org/licences/by-nc-nd/4.0/).
+Shared data should be as **open as possible, as closed as necessary** with the intent of allowing and enabling others to reuse and build upon the work. Thus, encouraging rather open licences such as **[CC0](https://creativecommons.org/public-domain/cc0/)** and **[CC BY](https://creativecommons.org/licences/by/4.0/)** as opposed to more restrictive licences such as [CC BY-SA](https://creativecommons.org/licences/by-sa/4.0/) or even [CC BY-NC-ND](https://creativecommons.org/licences/by-nc-nd/4.0/). Such restrictive licenses can make data reuse difficult.
 
 ### Creators and Contributors
 
 :::tip Standard
-*Research data repositories should label fields for creators in their (DataCite) metadata editor as authors/creators.*
+*Research data repositories should label fields for creators in their (DataCite) metadata editor as* Authors/Creators.
 :::
 
-Researchers are used to talking about authors when it comes to the publication of results with one of the scientific publishers. On the other hand, DataCite distinguishes between authors and contributors, with the latter also being assigned a role. To avoid confusion for researchers who want to publish their data, metadata editors of repositories should guide researchers when adding metadata by labelling the field for creators in their (DataCite) metadata editors as authors/creators. 
+Researchers are used to talking about authors when it comes to the publication of results with one of the scientific publishers. On the other hand, DataCite distinguishes between authors and contributors, with the latter also being assigned a role. To avoid confusion for researchers who want to publish their data, repositories should guide researchers when adding metadata by labelling the field for creators in their (DataCite) metadata editors as *Authors/Creators*. 
 
 ----
 Main authors: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661), [ORCID: 0000-0002-6243-2840](https://orcid.org/0000-0002-6243-2840)
